configsync/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns
  labels: 
    # version must match the ASM control plane!
    istio.io/rev: asm-1104-14
    # istio.io/rev: asm-110
    # istio-injection: enabled
