configsync/base/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  labels:
    kustomizeNamespaced: "true"
spec:
  outboundTrafficPolicy:
    # allow egress only to known destinations
    mode: REGISTRY_ONLY
    # mode: ALLOW_ANY
  # egress:
  # - hosts:
  #   - 'istio-system/*'
  #   - 'testing/*'
  #   # - 'istio-egress/*'
  #   # - 'team-x/*'
